log/build_2024-05-19_15-25-17/drone_controller/stderr.log
  File "/home/jagadeesh/ros2_ws/install/drone_controller/lib/python3.10/site-packages/drone_controller/img_sub2.py", line 81
    self.get_logger().error('Error processing image
                            ^
SyntaxError: unterminated string literal (detected at line 81)

